# argos-smd-driver-zephyr

./: .clang-format  .gitignore  Makefile  OTA_IMPLEMENTATION.md  README.md  west.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-docs.yml  deploy-docs.yml  on-pr.yml
.helix/: languages.toml
docs/: README.md  doxygen.config  header.html
drivers/: CMakeLists.txt  Kconfig
drivers/argos-smd/: CMakeLists.txt  Kconfig  argos_crc.c  argos_dfu.c  argos_smd.c  argos_smd.h  argos_smd_dfu_spi.c  argos_smd_priv.h  argos_smd_spi.c  kineis_dfu_spi.c  kineis_spi.c
drivers/argos-smd/docs/: README.md
dts/bindings/: vendor-prefixes.txt
dts/bindings/sensor/: arribada,argos-smd-spi.yaml  arribada,argos-smd-uart.yaml  arribada,argossmd.yaml  kineis,spi.yaml
examples/simple/: CMakeLists.txt  Kconfig  prj.conf
examples/simple/boards/: adafruit_feather_nrf52840.overlay
examples/simple/src/: main.c
include/argos-smd/: argos_crc.h  argos_dfu.h  argos_smd.h  argos_smd_dfu_spi.h  argos_smd_spi.h  kineis_dfu_spi.h  kineis_spi.h
include/drivers/argos-smd/: argos_smd.h
samples/ota_test/: CMakeLists.txt  EXTERNAL_FIRMWARE.md  Kconfig  README.md  fw_to_array.py  prj.conf  prj_rtt.conf
samples/ota_test/boards/: FEATHER_PINOUT.md  adafruit_feather_nrf52840.overlay  nrf52840dk_nrf52840.overlay
samples/ota_test/src/: main.c
samples/read_and_write/: CMakeLists.txt  README.md  prj.conf
samples/read_and_write/boards/: adafruit_feather_nrf52840.overlay
samples/spi_cmd/: CMakeLists.txt  prj.conf
samples/spi_cmd/src/: main.c
samples/spi_debug/: CMakeLists.txt  prj.conf
samples/spi_dfu_test/: CMakeLists.txt  Kconfig  prj.conf
scripts/: flash_rtt.sh  rtt.sh  rtt_logs.py  setup-ci-env.sh  start_rtt.sh  uart-pty.py
tests/integration/: CMakeLists.txt  README.md  prj.conf  testcase.yaml
tests/local/: CMakeLists.txt  prj.conf  testcase.yaml
tests/unit/: prj.conf  testcase.yaml
zephyr/: CMakeLists.txt  Kconfig  module.yml
(+13 files in other folders)
